Corrected h2 text-align

--- a/report/krueger2017.scss
+++ b/report/krueger2017.scss
@@ -66,7 +66,7 @@ h2 {
 	font-weight: $fontWeightThick;
 	margin: ($lineHeight * 2rem) auto;
 	page-break-after: avoid;
-	text-align: left;
+	text-align: center;
 	a:link, a:visited, a:hover, a:active {
 		color: $colorText;
 		text-decoration: none;
